<resources>
    <string name="app_name">Practo</string>
    <string name="terms_conditions"><![CDATA[By signing up, you agree to Terms & Conditions]]></string>
    <string name="register_login">Register/login with email</string>
    <string name="connect_facebook">Connect with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
